# WGPUI

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  core.rs  gpu.rs  input_recorder.rs  lib.rs  main.rs  mouse.rs  rect.rs  text_input.rs  ui.rs  ui2.rs  ui_context.rs  ui_items.rs  ui_panel.rs  utils.rs
